# ossl_wow

./: .gitignore  CMakeLists.txt  Notes.md  ReadMe.md  conanfile.py  copy_cat  run.py  var.cmake
c_app/: CMakeLists.txt  bio_64enc  bio_in  c_client.cpp  c_server.cpp  main.cpp
c_app/old_garb/: bio_encode_decode.md  bio_file_content_copy.md  bio_out  enc_dec.md  guess_net_game.md  reason_to_leave_openssl.md
conan/: clang_pr
global_includes/: xzlog.h
source/client/: CMakeLists.txt
source/client/src/: client.cpp
source/server/: CMakeLists.txt
source/server/src/: server.cpp
test_package/: CMakeLists.txt
test_package/src/: example.cpp
tests/: CMakeLists.txt  clientTest.cpp  serverTest.cpp
